WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301145
REGRESSION(
300544@main
): Caused excessive memory usage for offscreen position:sticky elements
https://bugs.webkit.org/show_bug.cgi?id=301145
Summary
REGRESSION(300544@main): Caused excessive memory usage for offscreen position...
WebKit Commit Bot
Reported
2025-10-20 16:10:38 PDT
https://commits.webkit.org/300544@main
introduced a regression: Caused excessive memory usage for offscreen position:sticky elements This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 300544@main
(6.73 KB, patch)
2025-10-20 16:10 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2025-10-20 16:10:44 PDT
Created
attachment 477152
[details]
REVERT of
300544@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Matt Woodrow
Comment 2
2025-10-20 16:11:03 PDT
rdar://162982044
EWS
Comment 3
2025-10-20 16:14:49 PDT
Committed
301832@main
(08150b2ace9f): <
https://commits.webkit.org/301832@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477152
[details]
.
EWS
Comment 4
2025-10-20 20:46:27 PDT
Committed
301765.56@safari-7623-branch
(fd4b45d57d57): <
https://commits.webkit.org/301765.56@safari-7623-branch
> Reviewed commits have been landed. Closing PR #3818 and removing active labels.
Alexey Proskuryakov
Comment 5
2025-10-22 14:09:14 PDT
***
Bug 301180
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug