Cherry-pick 08150b2ace9f. rdar://163075437

Unreviewed, reverting 300544@main.
    https://bugs.webkit.org/show_bug.cgi?id=301145

    Caused excessive memory usage for offscreen position:sticky elements

    Reverted changeset:

    "Sticky elements at the edge of the viewport can disappear when rubber band scrolling."

    https://bugs.webkit.org/show_bug.cgi?id=298709
    https://commits.webkit.org/300544@main
    Canonical link: https://commits.webkit.org/301832@main

Canonical link: https://commits.webkit.org/297297.539@safari-7622.2.11.10-branch