Source/WebCore/rendering/RenderLayer.h
@@ -567,8 +567,6 @@ public:
     void setBehavesAsFixed(bool);
     bool behavesAsFixed() const { return m_behavesAsFixed; }
 
-    bool behavesAsSticky() const { return m_hasStickyAncestor || renderer().isStickilyPositioned(); }
-
     struct PaintedContentRequest {
         PaintedContentRequest() = default;
         PaintedContentRequest(const RenderLayer& owningLayer);
